# skill-basin

./: .gitignore  CHANGELOG.md  NOTICE  README.md  agents.default.json  eslint.config.js  featured-skills.json  index.html  package-lock.json  package.json  sgconfig.yml
.github/workflows/: ci.yml  release.yml
brand_assets/: DESIGN.md  colors.txt
docs/: CHANGELOG.zh.md  README.zh.md  tag_profile_interactive_prototype.html
docs/future/: profile-requirements.md
docs/releases/v0.5.0/: ux-optimizations.md
docs/releases/v0.6.2/: minor-updates.md
docs/releases/v0.6.3/: minor-updates.md
docs/releases/v0.7.0/: ROADMAP.md  auto-update-optimizations.md  management-center-and-settings-ui.md  tool-management-and-custom-tools.md
hub-agent/: Cargo.toml
hub-agent/src/: lib.rs  main.rs
hub-agent/tests/: apply.rs
lint-rules/: README.md  no-conflated-installed-flag.yml  no-discarded-apply-results.yml  no-native-js-dialogs.yml  no-raw-remove-file.yml
mcp-server/: skills_mcp_server.py
mcp-server/tests/: test_skills_mcp.py
scripts/: rust-test.mjs  test-rust.ps1  test-rust.sh  vendor-agents.mjs  vendor-agents.test.mjs
src/: App.css  App.tsx  index.css  main.tsx  tauri-plugin-dialog.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  windows-tests.manifest
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/tests/: commands.rs
src-tauri/src/core/: agent_registry.rs  auto_update.rs  basin.rs  content_hash.rs  export.rs  fleet.rs  git_fetcher.rs  github_download.rs  github_search.rs  installer.rs  machine.rs  mod.rs  pins.rs  plugin_overlap.rs  secrets.rs  skill_files.rs  skill_store.rs  skills_search.rs  sync_engine.rs  system_scheduler.rs
src-tauri/src/core/tests/: agent_registry.rs  auto_update.rs  basin.rs  export.rs  github_search.rs  installer.rs  machine.rs  onboarding.rs  pins.rs  plugin_overlap.rs  secrets.rs  skill_store.rs  skills_search.rs  system_scheduler.rs  tool_adapters.rs
src-tauri/src/core/tool_adapters/: mod.rs
src/components/skills/: BasinPanel.tsx  ExplorePage.tsx  FilterBar.tsx  FleetPage.tsx  Header.tsx  ScopeSelector.tsx  SettingsPage.tsx  SkillCard.tsx  SkillDetailView.tsx  SkillVersionsPanel.tsx  SkillsList.tsx  TagsPage.tsx  ToolsPage.tsx  UpdatesPage.tsx  WindowControls.tsx  detailLayout.ts  installScope.test.ts  installScope.ts  types.ts
src/components/skills/modals/: AddSkillModal.tsx  ExploreDetailModal.tsx  NameConflictModal.tsx  ScopeSyncModal.tsx  UnlicensedInstallModal.tsx
src/i18n/: index.ts  resources.ts
test-logs/: faz-6.txt  faz-7.txt  faz-8.txt
