[package]
name = "skillbasin-agent"
version = "0.1.0"
description = "SkillBasin fleet agent: pull the basin, apply this machine's pins, report status"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hub_agent"
path = "src/lib.rs"

[[bin]]
name = "skillbasin-agent"
path = "src/main.rs"

[dependencies]
# Headless core only — no tauri, no webkit, no display.
app_lib = { package = "app", path = "../src-tauri", default-features = false }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
