[package]
name = "app"
version = "0.1.6"
description = "Manage every AI agent's skills from one desktop app"
authors = ["Kerem Cekici"]
license = "MIT"
repository = "https://github.com/Sayicon/skill-basin"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "app"
path = "src/main.rs"
required-features = ["desktop"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["test"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-log = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
git2 = { version = "0.19", features = ["vendored-openssl"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
junction = "1.1"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2.1"
# Already in the tree transitively; needed directly so the Daily auto-update
# schedule can resolve the user's LOCAL wall-clock time rather than UTC.
chrono = "0.4"
tauri-plugin-mcp-bridge = { version = "0.12.0", optional = true }
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
proptest = "1"

[features]
# The desktop app (Tauri shell, GUI commands, SQLite-backed store paths).
# Off => headless core only: pins/basin/sync/git — what hub-agent links
# against so a server build never needs webkit or a display.
default = ["desktop"]
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-log",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-updater",
]
# Off by default — only enables the tauri-mcp-server dev tool's Rust-side
# bridge. Regular builds/CI never pull this crate or its transitive deps.
# Enable with: cargo tauri dev --features mcp-bridge
mcp-bridge = ["desktop", "dep:tauri-plugin-mcp-bridge"]
